--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
 										<div class="dashboard_box">
 											<div class="dashboard_box_row flex items-center justify-between">
 												<div class="ellipsis_circle">
-													<img src="assets/images/projects.png" alt="" class="ellipsis_circle_img dark-none" />
-													<img src="assets/images/projects_white.png" alt="" class="ellipsis_circle_img dark-show d-none" />
+													<img src="assets/images/saloon.png" alt="" class="ellipsis_circle_img dark-none" />
+													<img src="assets/images/saloon.png" alt="" class="ellipsis_circle_img dark-show d-none" />
 												</div>	
 											</div>
 											<div class="dashboard_box_row2">
@@ -298,8 +298,8 @@
 										<div class="dashboard_box">
 											<div class="dashboard_box_row flex items-center justify-between">
 												<div class="ellipsis_circle">
-													<img src="assets/images/services.png" alt="" class="ellipsis_circle_img dark-none" />
-													<img src="assets/images/services_white.png" alt="" class="ellipsis_circle_img d-none dark-show" />
+													<img src="assets/images/haircut.png" alt="" class="ellipsis_circle_img dark-none" />
+													<img src="assets/images/haircut.png" alt="" class="ellipsis_circle_img d-none dark-show" />
 												</div>	
 											</div>
 											<div class="dashboard_box_row2">
@@ -312,7 +312,7 @@
 										<div class="dashboard_box">
 											<div class="dashboard_box_row flex items-center justify-between">
 												<div class="ellipsis_circle">
-													<img src="assets/images/orders.png" alt="" class="ellipsis_circle_img" />
+													<img src="assets/images/booking.png" alt="" class="ellipsis_circle_img" />
 												</div>	
 											</div>
 											<div class="dashboard_box_row2">
@@ -325,8 +325,8 @@
 										<div class="dashboard_box">
 											<div class="dashboard_box_row flex items-center justify-between">
 												<div class="ellipsis_circle">
-													<img src="assets/images/users.png" alt="" class="ellipsis_circle_img dark-none" />
-													<img src="assets/images/users_white.png" alt="" class="ellipsis_circle_img d-none dark-show" />
+													<img src="assets/images/partners.png" alt="" class="ellipsis_circle_img dark-none" />
+													<img src="assets/images/partners.png" alt="" class="ellipsis_circle_img d-none dark-show" />
 												</div>	
 											</div>
 											<div class="dashboard_box_row2">
